[package]
name = "omp-lswtss-driver-library"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
detour = { version = "^0.8.0", default_features = false }
netcorehost = { version = "^0.17.0", features = ["net8_0"] }
log = "^0.4.0"
serde = { version = "^1.0.0", features = ["derive"] }
serde_json = "^1.0.0"
simplelog = "^0.12.0"
reqwest = { version = "^0.12.0", features = ["blocking"] }
winapi = { version = "^0.3.0", features = [
  "libloaderapi",
  "minwindef",
  "winnt",
  "winuser",
] }
zip = "^0.6.0"
